# excerism

./: README.md
elixir/acronym/: acronym.exs
elixir/anagram/: anagram.exs
elixir/bob/: bob.exs
elixir/hamming/: hamming.exs
elixir/hello-world/: hello_world.exs
elixir/list-ops/: list_ops.exs
elixir/nucleotide-count/: dna.exs
elixir/phone-number/: phone_number.exs
elixir/rna-transcription/: dna.exs
elixir/run-length-encoding/: rle.exs
elixir/sublist/: sublist.exs
elixir/word-count/: word_count.exs
go/hello-world/: hello_world.go
haskell/bob/src/: Bob.hs
haskell/collatz-conjecture/Untitled.hsproj/: .uuid  CollatzConjecture.hs  Untitled.cabal  _Main.hsplay
haskell/collatz-conjecture/src/: CollatzConjecture.hs
haskell/hello-world.hsproj/: .uuid  helloworld.cabal
haskell/isbn-verifier/src/: IsbnVerifier.hs
haskell/isbn-verifier/test/: Tests.hs
haskell/leap/src/: LeapYear.hs
haskell/pangram/Untitled.hsproj/: .uuid  Pangram.hs  Untitled.cabal  _Pangram.hsplay
haskell/rail-fence-cipher/src/: RailFenceCipher.hs
haskell/sum-of-multiples/.exercism/: metadata.json
haskell/sum-of-multiples/src/: SumOfMultiples.hs
swift/accumulate/Sources/: Accumulate.swift
swift/bob/Sources/: Bob.swift
swift/difference-of-squares/Sources/: DifferenceOfSquares.swift
swift/etl/Sources/: Etl.swift
swift/gigasecond/Sources/: Gigasecond.swift
swift/grade-school/Sources/: GradeSchool.swift
swift/grains/Sources/: Grains.swift
swift/hamming/Sources/: Hamming.swift
swift/hello-world/Sources/: HelloWorld.swift
swift/isogram/Sources/: Isogram.swift
(+160 files in other folders)
